syntax = "proto3";

option csharp_namespace = "FitZone.StatisticsService.Protos";

service StatisticsGrpc {
    rpc GetSubscriptionNumber (StatisticsRequest) returns (StatisticsResponse);
}

message StatisticsRequest {
    string gymId = 1;
    string startDate = 2;
    string endDate = 3;
}

message StatisticsResponse {
    string numOfNormalSubscriptions = 1;
    string numOFPTSubscriptions = 2;
}